// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main elements match recorded snapshots BottomRightCorner renders with standard size 1`] = `
<svg
  className="invisible absolute bottom-0 right-0 z-10 md:visible"
  height={300}
  width={300}
>
  <defs>
    <linearGradient
      id="grad1"
      x1="0%"
      x2="100%"
      y1="0%"
      y2="100%"
    >
      <stop
        className="gradient2"
        offset="0"
      />
      <stop
        className="gradient1"
        offset=".5"
      />
      <stop
        className="gradient2"
        offset="1"
      />
    </linearGradient>
  </defs>
  <path
    d="M292 300H0l20-20h255a5 5 0 0 0 5-5V20l20-20v292a8 8 0 0 1-8 8Z"
    fill="url('#grad1')"
  />
</svg>
`;

exports[`main elements match recorded snapshots External Links exist upon render 1`] = `
<div
  className="absolute right-3 top-3 flex flex-col space-y-3 lg:right-2 lg:top-2 lg:row-end-auto lg:flex-row lg:space-x-4 lg:space-y-0"
>
  <a
    className="hover:scale-105"
    href="BomhofKylerResume.pdf"
    rel="me"
    target="_blank"
    title="Email"
  >
    <svg
      height="24"
      style={
        {
          "clipRule": "evenodd",
          "fillRule": "evenodd",
          "shapeRendering": "geometricPrecision",
          "textRendering": "geometricPrecision",
        }
      }
      version="1.1"
      viewBox="0 0 846.66 846.66"
      width="24"
      xmlSpace="preserve"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <style
          type="text/css"
        >
          .fil0 {fill: white; fill-rule: nonzero;}
        </style>
      </defs>
      <g
        id="Layer_x0020_1"
      >
        <path
          className="fil0"
          d="M539.75 794.68c27.15,0 27.15,41.29 0,41.29l-497.47 0c-11.4,0 -20.64,-9.25 -20.64,-20.65l0 -621.69c0,-5.7 2.31,-10.87 6.04,-14.6l162.3 -162.29c4.03,-4.03 9.31,-6.05 14.59,-6.05l466.89 0c11.4,0 20.65,9.25 20.65,20.65l0 361.36c0,27.16 -41.29,27.16 -41.29,0l0 -340.72 -437.7 0 -150.19 150.2 0 592.5 476.82 0zm-351.21 -181.98c-27.16,0 -27.16,-41.29 0,-41.29l306.67 0c27.16,0 27.16,41.29 0,41.29l-306.67 0zm0 -274.68c-27.16,0 -27.16,-41.29 0,-41.29l306.67 0c27.16,0 27.16,41.29 0,41.29l-306.67 0zm0 91.56c-27.16,0 -27.16,-41.29 0,-41.29l306.67 0c27.16,0 27.16,41.29 0,41.29l-306.67 0zm0 91.56c-27.16,0 -27.16,-41.29 0,-41.29l306.67 0c27.16,0 27.16,41.29 0,41.29l-306.67 0zm0 -274.68c-27.16,0 -27.16,-41.29 0,-41.29l306.67 0c27.16,0 27.16,41.29 0,41.29l-306.67 0zm496.57 238.25c49.84,0 90.24,40.4 90.24,90.24 0,18.1 -5.33,34.95 -14.5,49.07 37.57,24.93 61.47,66.08 64.13,111.2 1.59,27.06 -39.55,29.47 -41.13,2.42 -2.11,-35.69 -22.61,-67.48 -54.13,-84.24 -13.16,7.5 -28.38,11.78 -44.61,11.78 -17.56,0 -33.95,-5.01 -47.81,-13.69 -33.44,16.12 -55.6,49.04 -57.79,86.15 -1.59,27.05 -42.72,24.64 -41.13,-2.42 2.79,-47.18 28.75,-89.88 69.08,-114.28 -7.99,-13.47 -12.58,-29.19 -12.58,-45.99 0,-49.83 40.4,-90.24 90.23,-90.24zm0 41.29c-27.03,0 -48.94,21.92 -48.94,48.95 0,27.03 21.91,48.94 48.94,48.94 27.03,0 48.95,-21.91 48.95,-48.94 0,-27.03 -21.91,-48.95 -48.95,-48.95z"
        />
      </g>
    </svg>
  </a>
  <a
    className="hover:scale-105"
    href="https://github.com/senyc"
    rel="me"
    target="_blank"
    title="GitHub"
  >
    <svg
      fill="none"
      height="24"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
      />
    </svg>
  </a>
  <a
    className="hover:scale-105"
    href="https://www.linkedin.com/in/kyler-bomhof/"
    rel="me"
    target="_blank"
    title="Linkedin"
  >
    <svg
      fill="none"
      height="24"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
      />
      <rect
        height="12"
        width="4"
        x="2"
        y="9"
      />
      <circle
        cx="4"
        cy="4"
        r="2"
      />
    </svg>
  </a>
  <a
    className="hover:scale-105"
    href="mailto:kdbomhof@gmail.com"
    rel="me"
    target="_blank"
    title="Email"
  >
    <svg
      fill="none"
      height="24"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
      />
      <polyline
        points="22,6 12,13 2,6"
      />
    </svg>
  </a>
</div>
`;

exports[`main elements match recorded snapshots TopLeftCorner renders with standard size 1`] = `
<svg
  className="invisible absolute left-0 top-0 z-10 sm:visible"
  height={300}
  width={300}
>
  <defs>
    <linearGradient
      id="grad1"
      x1="0%"
      x2="100%"
      y1="0%"
      y2="100%"
    >
      <stop
        className="gradient1"
        offset="0"
      />
      <stop
        className="gradient2"
        offset=".5"
      />
      <stop
        className="gradient1"
        offset="1"
      />
    </linearGradient>
  </defs>
  <path
    d="M8 0h292l-20 20H25a5 5 0 0 0-5 5v255L0 300V8a8 8 0 0 1 8-8Z"
    fill="url('#grad1')"
  />
</svg>
`;
